<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@tools:sample/avatars"
                android:adjustViewBounds="true"
                android:layout_marginTop="-100dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition"
                android:rotation="-90"
                android:background="@color/white"
                android:padding="2dp"
                android:layout_marginTop="34dp"
                android:layout_marginLeft="-8dp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/tv_item_detail_tipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipe"
                android:background="@color/white"
                android:padding="2dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"/>

        </FrameLayout>


        <TextView
            android:id="@+id/tv_item_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/nama_barang"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tv_item_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_margin="16dp"
            android:text="@string/price"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_item_detail_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_description"
            android:layout_margin="16dp"
            android:lineSpacingExtra="1dp"/>

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/buy"/>


</LinearLayout>

</ScrollView>